@@ -519,6 +519,7 @@ $self->{texts} = {
   'CANCELED'                    => 'Storniert',
   'CB Transaction'              => 'SB-Buchung',
   'CB Transactions'             => 'SB-Buchungen',
+  'CC to Employee'              => 'CC an Mitarbeiter',
   'CN'                          => 'Kd-Nr.',
   'CR'                          => 'H',
   'CSS style for pictures'      => 'CSS Style für Bilder',
@@ -1063,6 +1064,8 @@ $self->{texts} = {
   'Direct debit revoked'        => 'Die Einzugsermächtigung wird widerrufen',
   'Directory'                   => 'Verzeichnis',
   'Disabled Price Sources'      => 'Deaktivierte Preisquellen',
+  'Disassemble Assembly'        => 'Erzeugnis zerlegen',
+  'Disassembly successful for #1' => 'Erzeugnis #1 erfolgreich zerlegt',
   'Discard duplicate entries in CSV file' => 'Doppelte Einträge in CSV-Datei verwerfen',
   'Discard entries with duplicates in database or CSV file' => 'Einträge aus CSV-Datei verwerfen, die es bereits in der Datenbank oder der CSV-Datei gibt',
   'Discount'                    => 'Rabatt',
@@ -1764,6 +1767,8 @@ $self->{texts} = {
   'Introduction of clients'     => 'Einführung von Mandanten',
   'Inv. Duedate'                => 'Rg. Fälligkeit',
   'Invalid'                     => 'Ungültig',
+  'Invalid assembly'            => 'Ungültiges Erzeugnis',
+  'Invalid bin'                 => '',
   'Invalid charge number: #1'   => 'Ungültige Chargennummer: #1',
   'Invalid combination of ledger account number length. Mismatch length of #1 with length of #2. Please check your account settings. ' => 'Ungültige Kombination der Nummernkreislänge der Sachkonten. Kann nicht eine Länge von #1 und eine Länge von #2 verarbeiten. Bitte entsprechend die Konteneinstellungen überprüfen.',
   'Invalid duration format'     => 'Falsches Format für Zeitdauer',
@@ -2145,6 +2150,7 @@ $self->{texts} = {
   'No profit and loss carried forward chart configured!' => 'Kein Verlustvortragskonto konfiguriert!',
   'No profit carried forward chart configured!' => 'Kein Gewinnvortragskonto konfiguriert!',
   'No quotations or orders have been created yet.' => 'Es wurden noch keine Angebote oder Aufträge angelegt.',
+  'No relations found for #1'   => 'Keine Relation für #1 gefunden',
   'No report with id #1'        => 'Es gibt keinen Report mit der Id #1',
   'No requirement spec templates have been created yet.' => 'Es wurden noch keine Pflichtenheftvorlagen angelegt.',
   'No results.'                 => 'Keine Artikel',
@@ -4248,6 +4254,7 @@ $self->{texts} = {
   'ea'                          => 'St.',
   'emailed to'                  => 'gemailt an',
   'empty'                       => 'leer',
+  'error while disassembling assembly #1 : #2' => 'Fehler beim Zerlegen von Erzeugnis #1: #2',
   'error while paying invoice #1 : ' => 'Fehler beim Bezahlen von Rechnung #1 : ',
   'error while unlinking payment #1 : ' => 'Fehler beim Zurücksetzen von Zahlung #1:',
   'every third month'           => 'vierteljährlich',
