@@ -519,6 +519,7 @@ $self->{texts} = {
   'CANCELED'                    => '',
   'CB Transaction'              => '',
   'CB Transactions'             => '',
+  'CC to Employee'              => '',
   'CN'                          => '',
   'CR'                          => '',
   'CSS style for pictures'      => '',
@@ -1063,6 +1064,8 @@ $self->{texts} = {
   'Direct debit revoked'        => '',
   'Directory'                   => '',
   'Disabled Price Sources'      => '',
+  'Disassemble Assembly'        => '',
+  'Disassembly successful for #1' => '',
   'Discard duplicate entries in CSV file' => '',
   'Discard entries with duplicates in database or CSV file' => '',
   'Discount'                    => '',
@@ -1764,6 +1767,8 @@ $self->{texts} = {
   'Introduction of clients'     => '',
   'Inv. Duedate'                => '',
   'Invalid'                     => '',
+  'Invalid assembly'            => '',
+  'Invalid bin'                 => '',
   'Invalid charge number: #1'   => '',
   'Invalid combination of ledger account number length. Mismatch length of #1 with length of #2. Please check your account settings. ' => '',
   'Invalid duration format'     => '',
@@ -2145,6 +2150,7 @@ $self->{texts} = {
   'No profit and loss carried forward chart configured!' => '',
   'No profit carried forward chart configured!' => '',
   'No quotations or orders have been created yet.' => '',
+  'No relations found for #1'   => '',
   'No report with id #1'        => '',
   'No requirement spec templates have been created yet.' => '',
   'No results.'                 => '',
@@ -4247,6 +4253,7 @@ $self->{texts} = {
   'ea'                          => '',
   'emailed to'                  => '',
   'empty'                       => '',
+  'error while disassembling assembly #1 : #2' => '',
   'error while paying invoice #1 : ' => '',
   'error while unlinking payment #1 : ' => '',
   'every third month'           => '',
