@@ -1,0 +1,3 @@
+[%- USE HTML %]
+ <input type="hidden" name="callback" value="[% HTML.escape(callback) %]">
+</form>
